# YoumeSDKRNDemo

./: .gitignore  README.md  app.json  package.json
SDK/cpp/androidGen/: NativeRNVoiceEngine.cpp  NativeRNVoiceEngine.hpp  NativeRNYIMChannelManager.cpp  NativeRNYIMChannelManager.hpp  NativeRNYIMCommon.cpp  NativeRNYIMCommon.hpp  NativeRNYIMFriendManager.cpp  NativeRNYIMFriendManager.hpp  NativeRNYIMHistoryMessageManager.cpp  NativeRNYIMHistoryMessageManager.hpp  NativeRNYIMLocationManager.cpp  NativeRNYIMLocationManager.hpp  NativeRNYIMManager.cpp  NativeRNYIMManager.hpp  NativeRNYIMMessageManager.cpp  NativeRNYIMMessageManager.hpp  NativeRNYIMUserInfoManager.cpp  NativeRNYIMUserInfoManager.hpp
SDK/cpp/callback/: AudioPlayCallback.cpp  AudioPlayCallback.h  ChannelCallback.cpp  ChannelCallback.h  FriendCallback.cpp  FriendCallback.h  IMManager.cpp  IMManager.h  LocationCallback.cpp  LocationCallback.h  MessageCallback.cpp  MessageCallback.h  UserInfoCallback.cpp  UserInfoCallback.h
SDK/cpp/impl/: RNVoiceEngineImpl.cpp  RNVoiceEngineImpl.h  RNYIMChannelManagerImpl.cpp  RNYIMChannelManagerImpl.h  RNYIMFriendManagerImpl.cpp  RNYIMFriendManagerImpl.h  RNYIMHistoryMessageManagerImpl.cpp  RNYIMHistoryMessageManagerImpl.h  RNYIMLocationManagerImpl.cpp  RNYIMLocationManagerImpl.h  RNYIMManagerImpl.cpp  RNYIMManagerImpl.h  RNYIMMessageManagerImpl.cpp  RNYIMMessageManagerImpl.h  RNYIMUserInfoManagerImpl.cpp  RNYIMUserInfoManagerImpl.h
SDK/iOSbind/: RCDjinniModulesInitializer.mm  RCRNVoiceEngine+Private.h  RCRNVoiceEngine+Private.mm  RCRNVoiceEngine.h  RCRNYIMChannelManager+Private.h  RCRNYIMChannelManager+Private.mm  RCRNYIMChannelManager.h  RCRNYIMCommon+Private.h  RCRNYIMCommon+Private.mm  RCRNYIMCommon.h  RCRNYIMCommon.mm  RCRNYIMFriendManager+Private.h  RCRNYIMFriendManager+Private.mm  RCRNYIMFriendManager.h  RCRNYIMHistoryMessageManager+Private.h  RCRNYIMHistoryMessageManager+Private.mm  RCRNYIMHistoryMessageManager.h  RCRNYIMLocationManager+Private.h  RCRNYIMLocationManager+Private.mm  RCRNYIMLocationManager.h  RCRNYIMManager+Private.h  RCRNYIMManager+Private.mm  RCRNYIMManager.h  RCRNYIMMessageManager+Private.h  RCRNYIMMessageManager+Private.mm  RCRNYIMMessageManager.h  RCRNYIMUserInfoManager+Private.h  RCRNYIMUserInfoManager+Private.mm  RCRNYIMUserInfoManager.h  yim_bridging_header.h
SDK/support-lib/: generate_react.sh  react.yaml
SDK/support-lib/cpp/: JobQueueImpl.hpp
SDK/support-lib/jni/: NativeJavascriptArray.hpp  NativeJavascriptCallback.hpp  (+9 more)
android/: settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/youmesdkrndemo/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/yimrn/: .project  build.gradle
ios/: Podfile
ios/YoumeSDKRNDemo/: AppDelegate.m  Info.plist
ios/YoumeSDKRNDemo.xcodeproj/: project.pbxproj
ios/YoumeSDKRNDemo.xcworkspace/: contents.xcworkspacedata
ios/YoumeSDKRNDemoTests/: YoumeSDKRNDemoTests.m
(+40 files in other folders)
